<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explanation"
            android:textSize="16sp"
            android:paddingBottom="20dp" />

        <Button
            android:id="@+id/developer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer_button"
            android:minHeight="54dp" />

        <Button
            android:id="@+id/debug_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_button"
            android:minHeight="54dp" />

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:minHeight="54dp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingTop="20dp" />
    </LinearLayout>
</ScrollView>
